--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>itesa-connect</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <link rel="icon" type="image/x-icon" href="/favicon.png" />
+    <title>ITESA - DYPCOE</title>
+    
+    <meta name="description" content="The official website for the ITESA student association at D. Y. Patil College of Engineering (DYPCOE), Pune. Discover our tech events, workshops, and meet the team." />
+    
+    <meta name="author" content="ITESA DYPCOE" />
 
-    <meta property="og:title" content="itesa-connect" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="ITESA - The Official Tech Club of DYPCOE" />
+    <meta property="og:description" content="Discover events, workshops, and more from the Innovation, Technology, and Excellence Students Association at DYPCOE." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://bhephgetoquqyffcbxgt.supabase.co/storage/v1/object/public/images/logo.webp" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://bhephgetoquqyffcbxgt.supabase.co/storage/v1/object/public/images/logo.webp" />
   </head>
 
   <body>
