Update footer links and finalize pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/favicon.png" />
     <title>ITESA - DYPCOE</title>
-    
+    <meta name="google-site-verification" content="G3u1Ah0TWRyUA7_l9F7Um-bAApk8MxkPDmYQcO3rjjM" />
     <meta name="description" content="The official website for the ITESA student association at D. Y. Patil College of Engineering (DYPCOE), Pune. Discover our tech events, workshops, and meet the team." />
     
     <meta name="author" content="ITESA DYPCOE" />
